--- a/_posts/Mysql/2021-06-09-MySQL.md
+++ b/_posts/Mysql/2021-06-09-MySQL.md
@@ -8,6 +8,7 @@ background-image: http://ot1cc1u9t.bkt.clouddn.com/17-8-1/24280498.jpg
 tags:
 - MySQL
 ---
+
 > 目录
 >  1 MySql基础知识
 >  2 MySql逻辑架构
@@ -25,9 +26,9 @@ tags:
 >  · 《尚硅谷MySql》
 >  ·  JavaG
 
-1 MySql基础知识
+# MySql基础知识
 
-1.1 数据库的概念
+## 数据库的概念
 
 （1）DB
 
@@ -41,9 +42,9 @@ tags:
 
 结构化查询语言（Structure Query Language）：专门用来与数据库通信的语言
 
-## 1.2 SQL语言分类
+## SQL语言分类
 
-### 1.2.1 DML（Data Manipulation Language)
+### DML（Data Manipulation Language)
 
 数据操纵语句，用于添加、删除、修改、查询数据库记录，并检查数据完整性
 
@@ -63,7 +64,7 @@ tags:
 
 ![image](https://upload-images.jianshu.io/upload_images/24777208-12bf77840221f182.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.2.2 DDL（Data Definition Language)
+### DDL（Data Definition Language)
 
 数据定义语句，用于库和表的创建、修改、删除。
 
@@ -77,7 +78,7 @@ tags:
 
 （5）DROP INDEX：删除索引
 
-### 1.2.3 DCL（Data Control Language)
+### DCL（Data Control Language)
 
 数据控制语句，用于定义用户的访问权限和安全级别。
 
@@ -93,7 +94,7 @@ tags:
 
 （6）LOCK：对数据库的特定部分进行锁定
 
-## 1.3 SQL语言规范
+## SQL语言规范
 
 （1）不区分大小写
 
@@ -105,9 +106,9 @@ tags:
 
 （5）用缩进提高语句的可读性
 
-## 1.4 数据处理之查询
+## 数据处理之查询
 
-### 1.4.1 基本的SELECT语句
+### 基本的SELECT语句
 
 （1）别名
 
@@ -122,7 +123,7 @@ tags:
 - 日期和字符只能在单引号中出现。
 - 每当返回一行时，字符串被输出一次。
 
-### 1.4.2 过滤和排序数据
+### 过滤和排序数据
 
 （1）过滤
 
@@ -152,7 +153,7 @@ DESC（descend）: 降序
 
 ![image](https://upload-images.jianshu.io/upload_images/24777208-5dd3dc8dc592a027.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.4.3 分组函数
+### 分组函数
 
 （1）作用
 
@@ -208,7 +209,7 @@ DESC（descend）: 降序
 
 ![image](https://upload-images.jianshu.io/upload_images/24777208-1f9834ab82ac88df.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.4.4 多表查询
+### 多表查询
 
 （1）where链接
 
@@ -247,33 +248,34 @@ mysql内连接 [inner] join on
 
 ![image](https://upload-images.jianshu.io/upload_images/24777208-f7cea2fddb2f9aa1.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.4.5 分页查询
+### 分页查询
 
-## 1.5 常见函数
-### 1.5.1 字符函数
+## 常见函数
+### 字符函数
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-c68c1581463a92f9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ####（1）大小写控制函数
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-2fa9b5c0152de7bb.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ####（2）字符控制函数
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-589a8e3514eef3ce.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.5.2 数学函数
+### 数学函数
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-248af2e384fa8e9d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.5.3 日期函数
+### 日期函数
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-39c374b4263a683a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-12765a961095a675.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.5.4 流程控制函数【补充】
+### 流程控制函数【补充】
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-971d331be350fa06.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-210aeae945c5d7af.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-## 1.6 子查询
+## 子查询
 描述子查询可以解决的问题。
 • 定义子查询。
 • 列出子查询的类型。
 • 书写单行子查询和多行子查询。
-### 1.6.1 概念
-####（1）出现在其他语句内部的select语句，称为子查询或内查询
+### 概念
+
+#### （1）出现在其他语句内部的select语句，称为子查询或内查询
   内部嵌套其他select语句的查询，称为外查询或主查询
   示例：
 ```
@@ -290,22 +292,22 @@ where location_id=1700
 #### （3）解决的问题
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-dac9df5e88bd87da.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-### 1.6.2 子查询类型
+### 子查询类型
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-8382c01775e35213.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（1）单行子查询
+#### （1）单行子查询
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-9761603e21d6ed60.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 语法
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-e61ec4bff0c810c1.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 可以使用组函数、HAVING子句
 - 对于子查询中的空值，不返回任何行
-####（2）多行子查询
+#### （2）多行子查询
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-816ec10c1465b10e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - ANY
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-fdf48db584a713c7.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - ALL
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-c396cfd68c2b1418.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-##1.7 数据处理之增删改
-###（1）插入数据
+## 数据处理之增删改
+### （1）插入数据
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-fcfd01fd846e8fe6.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-28e33a159fa23001.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 插入空值
@@ -320,25 +322,25 @@ where location_id=1700
 ###（3）删除数据
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-f5c38766ebcebbf7.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-3fb81c7b6187fb47.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-##1.8 创建和管理表
+## 创建和管理表
 - 创建数据库
 - 创建表
 - 描述各种数据类型
 - 修改表的定义
 - 删除，重命名和清空表
-###1.8.1 创建数据库
-####（1）命名规则
+### 1创建数据库
+#### （1）命名规则
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-aaa4aafce47946b5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（2）语句
+#### （2）语句
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-777b1ef019af4476.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.8.2 创建表
+### 创建表
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-ca3e5aec0b6f4ef2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（1）常用数据类型
+#### （1）常用数据类型
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-9b69c159e98fed51.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（2）使用子查询创建表
+#### （2）使用子查询创建表
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-65c0d719fbacd385.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-a715170abfe28f4c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（3）ALTER TABLE 语句
+#### （3）ALTER TABLE 语句
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-61471e1a5fd85c25.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 追加一个新列
 ![](https://upload-images.jianshu.io/upload_images/24777208-22e9cc4295acfa42.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
@@ -348,24 +350,24 @@ where location_id=1700
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-4d02aa239725018a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 重命名一个列
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-f21eff6c24567949.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（4）删除表
+#### （4）删除表
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-a2436311ee00a320.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（5）清空表
+#### （5）清空表
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-e088a4bdf9f633a4.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-####（6）改变对象的名称
+#### （6）改变对象的名称
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-62b02693a90c0097.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-##1.9 约束和分页
+## 约束和分页
 - 描述约束
 - 创建和维护约束
 -  数据库分页
-###1.9.1 约束
-####（1）什么是约束
+### 约束
+#### （1）什么是约束
 - 为了保证数据的一致性和完整性，SQL规范以约束的方式对表数据进行额外的条件限制。
 - 约束是**表级**的强制规定
 - 可以在创建表时规定约束（通过 CREATETABLE 语句），或者在表创建之后也可以（通
 过 ALTER TABLE 语句）
 
-####（2）约束分类
+#### （2）约束分类
 ![](https://upload-images.jianshu.io/upload_images/24777208-3f0adc7b94db3858.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 根据约束数据列的限制，约束可分为：
 单列约束：每个约束只约束一列
@@ -412,25 +414,25 @@ where location_id=1700
 **5. CHECK约束**
 ![](https://upload-images.jianshu.io/upload_images/24777208-1709570e96453b47.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-###1.9.2 分页
-####（1）limit分页
+### 分页
+#### （1）limit分页
 - 背景
 查询返回的记录太多了，查看起来很不方便，怎么样能够实现分页查询呢？
 - 分页原理
 所谓分页显示，就是将数据库中的结果集，一段一段显示出来需要的条件
-####（2）分页实现
+#### （2）分页实现
 ![](https://upload-images.jianshu.io/upload_images/24777208-55bdf8973be4e5fd.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-##1.10 事物
+## 事物
 - 事务的概念和特性
 - 事务的隔离级别
 - 事务的案例演示
-###1.10.1 简介
+### 简介
 （1）概念
 事务由单独单元的一个或多个SQL语句组成，在这个单元中，每个MySQL语句是相互依赖的。而整个单独单元作为一个不可分割的整体，如果单元中某条SQL语句一旦执行失败或产生错误，整个单元将会回滚。所有受到影响的数据将返回到事物开始以前的状态；如果单元中的所有SQL语句均执行成功，则事物被顺利执行。
 （2）存储引擎和事物
 - 通过show engines；来查看mysql支持的存储引擎。
 - 在mysql中用的最多的存储引擎有：innodb，myisam ,memory 等。其中innodb支持事务，而myisam、memory等不支持事务
-###1.10.2 事物的特点
+### 事物的特点
 事务的ACID(acid)属性
 - 原子性（Atomicity）
 原子性是指事务是一个不可分割的工作单位，事务中的操作要么都发生，要么都不发生。
@@ -440,14 +442,14 @@ where location_id=1700
 事务的隔离性是指一个事务的执行不能被其他事务干扰，即一个事务内部的操作及使用的数据对并发的其他事务是隔离的，并发执行的各个事务之间不能互相干扰。
 - 持久性（Durability）
 持久性是指一个事务一旦被提交，它对数据库中数据的改变就是永久性的，接下来的其他操作和数据库故障不应该对其有任何影响
-###1.10.3 事物的使用
+### 事物的使用
 - 以第一个 DML 语句的执行作为开始
 - 以下面的其中之一作为结束: 
 `COMMIT 或 ROLLBACK 语句`
 `DDL 或 DCL 语句（自动提交）`
 `用户会话正常结束`
 `系统异常终了`
-###1.10.4 数据库的隔离级别
+### 数据库的隔离级别
 （1）事物与事物
 - 对于同时运行的多个事务, 当这些事务访问数据库中相同的数据时, 如果没有采取必要的隔离机制, 就会导致各种并发问题: 
 > 脏读: 对于两个事务 T1, T2, T1 读取了已经被 T2 更新但还没有被提交的字段. 
@@ -471,19 +473,19 @@ where location_id=1700
 `set transaction isolation level read committed; `
 - 设置数据库系统的全局的隔离级别: 
 `set global transaction isolation level read committed;`
-##1.11 视图
+## 视图
 - 什么是视图
 - 创建或修改视图
 - 删除视图
 - 查看视图
-###1.11.1 概念
+### 概念
 （1）什么是视图
 ![](https://upload-images.jianshu.io/upload_images/24777208-360ae15d3ac64e5d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 （2）视图的好处
 - 重用sql语句
 - 简化复杂的sql操作，不必知道它的查询细节
 - 保护数据，提高安全性
-###1.11.2 操作视图
+### 操作视图
 (1) 创建和修改
 ![](https://upload-images.jianshu.io/upload_images/24777208-928a91e5348d354f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 **视图的可更新性和视图中查询的定义有关系，以下类型的视图是不能更新的。**
@@ -500,31 +502,31 @@ where location_id=1700
 (3) 查看视图
 ![](https://upload-images.jianshu.io/upload_images/24777208-08919fc77c6e0bba.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-##1.12 存储过程和函数
+## 存储过程和函数
 - 什么是存储过程和函数
 - 使用存储过程和函数的好处
 - 创建存储过程和函数
 - 修改存储过程和函数
 - 调用存储过程和函数
 - 查看存储过程和函数
-###1.12.1 什么是存储过程和函数
+### 什么是存储过程和函数
 - 存储过程和函数：
 事先经过编译并存储在数据库中的一段sql语句的集合。
 - 使用好处：
 简化应用开发人员的很多工作
 减少数据在数据库和应用服务器之间的传输
 提高了数据处理的效率
-###1.12.2 创建存储过程和函数
+### 创建存储过程和函数
 ![](https://upload-images.jianshu.io/upload_images/24777208-0517b99b3e693be3.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)![](https://upload-images.jianshu.io/upload_images/24777208-0635db5481bfc4dd.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-###1.12.3 修改、删除、查看存储过程和函数
+### 修改、删除、查看存储过程和函数
 ![](https://upload-images.jianshu.io/upload_images/24777208-f1a21ad2cfbf191a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)![](https://upload-images.jianshu.io/upload_images/24777208-2e578720bae12fb2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)![](https://upload-images.jianshu.io/upload_images/24777208-4f81868e393008f5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-###1.12.4 调用存储过程和函数
+### 调用存储过程和函数
 ![](https://upload-images.jianshu.io/upload_images/24777208-066ccf99dacf9ee0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 举例使用场景：
 ![image.png](https://upload-images.jianshu.io/upload_images/24777208-8dc22003626f9ce2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-##1.12 流程控制
+## 流程控制
 （1）case结构——作为表达式
 ![](https://upload-images.jianshu.io/upload_images/24777208-2200a9666fb2f8e4.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 （2）case结构——作为独立的语句
@@ -532,54 +534,54 @@ where location_id=1700
 （3）循环结构
 ![](https://upload-images.jianshu.io/upload_images/24777208-9c035f39cf78d08a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-##1.13 Sql语句训练
+## Sql语句训练
 均来自于leetcode
-###1.13.1 leetcode595
+###  leetcode595
 ![](https://upload-images.jianshu.io/upload_images/24777208-3f9ad4466d637017.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-c5211026d0fc81fb.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.2 leetcode627
+### leetcode627
 ![](https://upload-images.jianshu.io/upload_images/24777208-3685b30e0e057b1f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.3 leetcode620
+### leetcode620
 ![](https://upload-images.jianshu.io/upload_images/24777208-1cd9972e0b3fcc97.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.4 leetcode596
+### leetcode596
 ![](https://upload-images.jianshu.io/upload_images/24777208-10fecfb307a1d67e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.5 leetcode182
+### leetcode182
 ![](https://upload-images.jianshu.io/upload_images/24777208-14248bb03e7c7a53.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.6 leetcode196
+### leetcode196
 ![](https://upload-images.jianshu.io/upload_images/24777208-01071e5687220113.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-2393f377368487f0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.7 leetcode175
+### leetcode175
 ![](https://upload-images.jianshu.io/upload_images/24777208-2aaecd5df69f07a9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-3068efdd9136175c.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.8 leetcode181
+### leetcode181
 ![](https://upload-images.jianshu.io/upload_images/24777208-23f911e297167ead.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.9 leetcode183
+### leetcode183
 ![](https://upload-images.jianshu.io/upload_images/24777208-fab74a9559c4fbc9.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-2531058b00d9f275.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.10 leetcode184
+### leetcode184
 ![](https://upload-images.jianshu.io/upload_images/24777208-390e03833f7be169.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-c79765917c191d2f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.11 leetcode176
+### leetcode176
 ![](https://upload-images.jianshu.io/upload_images/24777208-f24b50ec768ff2bd.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.12 leetcode177
+### leetcode177
 ![](https://upload-images.jianshu.io/upload_images/24777208-74b40bf409ea94c5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.13 leetcode178
+### leetcode178
 ![](https://upload-images.jianshu.io/upload_images/24777208-493d10aec6039199.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-cdd2940c160bbf24.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.14 leetcode180
+### leetcode180
 ![](https://upload-images.jianshu.io/upload_images/24777208-daac3778f925173d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-34a4aab3e3836d11.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-###1.13.15 leetcode626
+### leetcode626
 ![](https://upload-images.jianshu.io/upload_images/24777208-99036b9a49b01572.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/24777208-2a5c352bf8da408a.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
 
-# 2 MySql逻辑架构
-## 2.1 架构图
+# MySql逻辑架构
+##  架构图
 ![](https://upload-images.jianshu.io/upload_images/24777208-18bf13ea976032e6.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-## 2.2 连接/线程管理
+## 连接/线程管理
 
 （1）每个客户端连接都会在服务器进程中拥有一个线程
 
@@ -590,7 +592,7 @@ where location_id=1700
 
 （3）默认端口号：**3306**
 
-## 2.3 关系型数据库
+## 关系型数据库
 
 （1）关系型数据库
   关系型数据库是建立在关系模型基础上的数据库，借助于集合代数等数学概念和方法来处理数据库中的数据。简单说，**关系型数据库是由多张能互相连接的表组成的数据库**。
@@ -635,7 +637,7 @@ where location_id=1700
   4. 高可用
   NoSQL在不太影响性能的情况，就可以方便地实现高可用的架构。比如Cassandra、HBase模型，通过复制模型也能实现高可用。
 
-## 2.4 查询缓存
+## 查询缓存
 
 （1）执行查询语句时，先查询缓存
 
@@ -646,13 +648,13 @@ where location_id=1700
 - 严格匹配才能命中缓存
 - 查询中不能包含不确定语句，否则不缓存
 
-## 2.5 存储引擎
+## 存储引擎
 - 作用：负责MySql中数据的存储和提取
 - 服务器通过API与存储引擎通信
 
-# 3 并发控制
+# 并发控制
 
-## 3.1 读写锁
+## 读写锁
 
 （1）共享锁--读锁
 
@@ -663,11 +665,11 @@ where location_id=1700
 - 一个写锁会阻塞其他的写锁和读锁
 - 写锁比读锁有更高的优先级
 
-## 3.2 锁粒度
+## 锁粒度
 
    尽量只锁定需要修改的部分数据，而不是所有的资源。**MySQL存储引擎可以实现自己的锁策略和锁粒度**。
 
-### 3.2.1 表锁
+### 表锁
 
 特点：
 
@@ -676,20 +678,20 @@ where location_id=1700
 - 开销小
 - MySql为DDL类语句使用标所，忽略存储引擎的锁机制。
 
-### 3.2.2 行锁
+### 行锁
 
-#### 3.2.2.1 特点
+#### 特点
  - 锁定当前操作的行
 - 最大程度地支持并发处理
 - 开销大
 - 会出现死锁
 
-#### 3.2.2.2 InnoDB中的行锁分类
+#### InnoDB中的行锁分类
 - Record lock 对索引加锁，锁定行
 - Gap lock “间隙”加锁，锁定一个范围（不含索引项本身），防止幻读
 - Next-Key lock 结合上述两种，锁定索引项本身和索引范围，解决幻读问题
 
-## 3.3 InnoDB的死锁
+## InnoDB的死锁
 
 （1）InnoDB的行级锁是基于索引实现的，如果查询语句为命中任何索引，那么InnoDB会使用表级锁
 
@@ -707,13 +709,13 @@ where location_id=1700
 - 多个程序尽量约定以相同的顺序访问表（这也是解决并发理论中哲学家就餐问题的一种思路）；
  同一个事务尽可能做到一次锁定所需要的所有资源。
 
-# 4 事务
+# 事务
 
-## 4.1 概念
+## 概念
 
    逻辑上的一组操作，要么都执行，要么都不执行（即回滚，返回上一次正确状态）。
 
-## 4.2 事务四大特性（ACID）
+## 事务四大特性（ACID）
 
 （1）原子性
 
@@ -740,12 +742,12 @@ where location_id=1700
 
    一旦事务提交，则其所做的修改就会永久保存到数据库中。
 
-## 4.3 事务日志
+## 事务日志
 - 存储引擎在修改表的数据是只需要修改其内存的拷贝，再把修改行为记录到持久在硬盘的事务日志中。
 - 即修改数据，需要写两次磁盘。
 - 若系统崩溃，可通过日志自动恢复数据
 
-## 4.4 MySQL中的事务
+## MySQL中的事务
 
 （1）MySQL默认采用自动提交模式。即如果不显式地开始一个事务，则每个查询都被当做一个事务执行提交操作。
 
@@ -753,17 +755,17 @@ where location_id=1700
 - 隐式：事务执行过程中，随时都可以执行锁定，锁只有在执行COMMIT或者ROLLBACK的时候才会释放锁
 - 显式：在MySQL语句中使用LOCK TABLES或者UNLOCK TABLES。
 
-# 5 MVCC多版本并发控制
+# MVCC多版本并发控制
 
-## 5.1 特性
+## 特性
 
    MVCC是行级锁的一个变种，但是它在很多情况下避免了加锁操作，因此开销更低。虽然不同数据库的实现机制有所不同，但大都实现了非阻塞的读操作，写操作也只锁定必要的行。
 
   **MVCC**在**MySQL InnoDB**中的实现主要是为了提高数据库并发性能，用更好的方式去处理读-写冲突，做到即使有读写冲突时，也能做到不加锁，非阻塞并发读
 
-## 5.2 相关概念
+## 相关概念
 
-### 5.2.1 快照 snapshot
+###  快照 snapshot
 
 （1）事务快照是用来存储数据库的事务运行情况
 
@@ -771,19 +773,19 @@ where location_id=1700
 - 在innodb中(默认repeatable read级别), 事务在begin/start transaction之后的第一条select读操作后, 会创建一个快照(read view), 将当前系统中活跃的其他事务记录记录起来; 
 - 在innodb中(READ COMMITTED级别), 事务中每条select语句都会创建一个快照(read view);
 
-### 5.2.2 undo-log
+### undo-log
 
 （1）当我们对记录做了变更操作时就会产生undo记录
 
 （2）Undo记录中存储的是老版本数据。当一个旧的事务需要读取数据时，为了能读取到老版本的数据，需要顺着undo链找到满足其可见性的记录
 
-### 5.2.3 redo-log
+###  redo-log
 
 存储变更后的数据
 
-## 5.3 InnoDB实现的MVCC
+## InnoDB实现的MVCC
 
-### 5.3.1 InnoDB存储引擎在数据库每行数据的后面添加了三个字段
+###  InnoDB存储引擎在数据库每行数据的后面添加了三个字段
 
    字段称之为系统版本号。
 
@@ -801,7 +803,7 @@ where location_id=1700
 
 如果我们的表中没有主键或合适的唯一索引, 也就是无法生成聚簇索引的时候, InnoDB会帮我们自动生成聚集索引, 但聚簇索引会使用DB_ROW_ID的值来作为主键; 如果我们有自己的主键或者合适的唯一索引, 那么聚簇索引中也就不会包含 DB_ROW_ID 了
 
-### 5.3.2 更新步骤
+###  更新步骤
 
 ![image](https://upload-images.jianshu.io/upload_images/24777208-32e0b2adbc54c988.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
@@ -813,7 +815,7 @@ where location_id=1700
 
 （4）修改当前行的值，填写事务编号，使用回滚指针，指向Undo-log中的修改前的行
 
-### 5.3.3 当前读和快照读
+### 当前读和快照读
 
 InnoDB存储引擎默认的事务隔离级别是REPEATABLE-READ。通过 "行排他锁+MVCC" 一起实现的, 不仅可以保证可重复读, 还可以防止幻读。
 
@@ -831,17 +833,17 @@ InnoDB存储引擎默认的事务隔离级别是REPEATABLE-READ。通过 "行排
  >[Mysql 间隙锁原理，以及Repeatable Read隔离级别下可以防止幻读原理(百度) - aspirant - 博客园](https://www.cnblogs.com/aspirant/p/9177978.html)
  >[【MySQL】当前读、快照读、MVCC - wwcom123 - 博客园](https://www.cnblogs.com/wwcom123/p/10727194.html)
 
-### 5.3.4 工作环境
+### 工作环境
 
 仅在两个隔离级别下工作，REPEATABLE READ(可重复读)和READ COMMITTED（提交读）。
 
-# 6 存储引擎
+#  存储引擎
 
-## 6.1 查看表的存储引擎
+## 查看表的存储引擎
 
 show table status like "table_name"
 
-## 6.2 MyISAM和InnoDB对比
+## MyISAM和InnoDB对比
 
 MySQL 5.5版本后默认的存储引擎为InnoDB。
 
@@ -880,13 +882,13 @@ MyISAM不支持，而InnoDB支持
 **· 注意**
    “聚集索引”是一种数据存储方式，同时保存索引和数据行。一个表中只能有一个聚集索引。
 
-# 7 索引
+# 索引
 ## 7.1 意义
 索引用来快速地寻找那些具有特定值的记录，**所有MySQL索引都以B-树的形式保存**。如果没有索引，执行查询时MySQL必须**从第一个记录开始扫描整个表的所有记录**，直至找到符合要求的记录。
 
-## 7.2 实现原理
+## 实现原理
 
-### 7.2.1 B-Tree索引
+### B-Tree索引
 
 ![image](https://upload-images.jianshu.io/upload_images/24777208-3841df236781958f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
@@ -894,7 +896,7 @@ MyISAM不支持，而InnoDB支持
 
 （2）B+Tree：叶节点指向下一个叶节点，方便叶节点遍历
 
-### 7.2.2 哈希索引
+### 哈希索引
 
 （1）基于哈希表实现，存储引擎会对所有的索引列计算一个哈希码
 
@@ -904,7 +906,7 @@ MyISAM不支持，而InnoDB支持
 
 （4）避免哈希冲突：在WHERE条件中带入哈希值和对应列值。
 
-## 7.3 分类
+## 分类
 
 （1）主键索引
 - 唯一性索引，必须指定为“PRIMARY KEY”。每个表只能有一个主键，主键也不能为空
@@ -945,14 +947,14 @@ MyISAM不支持，而InnoDB支持
 - 主键更适合那些不容易更改的唯一标识，如自动递增列、身份证号等。
 - 在 RBO 模式下，主键的执行计划优先级要高于唯一索引。 两者可以提高查询的速度。
 
-## 7.4 查询索引命令
+## 查询索引命令
 - show index from 表名
 - show keys from 表名
 
-## 7.5 使用索引的代价
+## 使用索引的代价
 对DML(update、delete、insert)语句的效率，增删改会对索引影响，因为索引要重新整理。
 
-## 7.6 注意事项
+## 注意事项
 
 （1）存储引擎对索引的支持
 
@@ -968,8 +970,8 @@ MyISAM不支持，而InnoDB支持
 - 模糊查询在like前面有百分号开头会失效。
 - 如果条件中有or，即使其中有条件带索引也不会使用。换言之，就是要求使用的所有字段，都必须建立索引, 我们建议大家尽量避免使用or 关键字
 
-# 8 MySql优化
-## 8.1 分表分库
+# MySql优化
+## 分表分库
 （1）垂直拆分（拆分列）
         垂直拆分就是要把表按模块划分到不同**数据库**表中（当然原则还是不破坏第三范式）。例如分布式情况下，为将一个项目进行拆分成多个子模块，每个子模块有单独数据库（解耦数据）。
 
@@ -981,7 +983,7 @@ MyISAM不支持，而InnoDB支持
 - 不同步自增id，如主奇从偶
 - redis生成id，但是让系统更复杂
 
-## 8.2 读写分离
+## 读写分离
 （1）主从复制
   - 原理，主数据库将二进制日志文件（bin-log）传给从数据库。
   - 触发时刻：从数据库监控主数据库二进制文件的变化，发生变化则通过IO线程进行二进制文件的复制和传输。
@@ -996,13 +998,13 @@ MyISAM不支持，而InnoDB支持
                 1 分摊服务器压力，提高机器的系统处理效率
                 2 增加冗余，提高系统可用性，可以在主数据库宕机式进行数据恢复
 
-## 8.3 系统扩展
+## 系统扩展
 
 （1）垂直扩展（scale-up），在单机器上加存储、加内存、加CPU
 
 （2）水平扩展（scale-out）， 加机器数量，做集群
 
-## 8.4 MyCat 中间件
+## MyCat 中间件
 
 （1）作用：分发请求，保证安全、读写分离、高可用、负载均衡
 
@@ -1010,20 +1012,20 @@ MyISAM不支持，而InnoDB支持
 
 **· 阿里的rds系统**
 即开即用的关系型数据库服务，提供了强大丰富的功能，保证高可用性、安全性、高性能。
-## 8.5 书写高质量SQL的30条建议
+## 书写高质量SQL的30条建议
 [书写高质量SQL的30条建议](https://mp.weixin.qq.com/s?__biz=Mzg2OTA0Njk0OA==&mid=2247486461&idx=1&sn=60a22279196d084cc398936fe3b37772&chksm=cea24436f9d5cd20a4fa0e907590f3e700d7378b3f608d7b33bb52cfb96f503b7ccb65a1deed&token=1987003517&lang=zh_CN%23rd)
 
-## 8.6 Order by 底层原理和SQL优化
+##  Order by 底层原理和SQL优化
 [order by 底层原理和优化查询案例](https://blog.csdn.net/qq_34162294/article/details/105508631)
 
-## 8.7 MySQL分页查询优化
+##  MySQL分页查询优化
 [分页查询的性能优化方案](https://www.cnblogs.com/scotth/p/7995856.html)
 [sql进行Order by排序再进行分页limit取值会出现重复显示问题](https://blog.csdn.net/weixin_41092717/article/details/82351735?utm_medium=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-1.control&dist_request_id=&depth_1-utm_source=distribute.pc_relevant_t0.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-1.control)
 [mysql分页出现重复数据-order by](https://blog.csdn.net/nannan819/article/details/54171708)
 
-# 9 其他知识点
+#  其他知识点
 
-## 9.1 存储过程和函数
+## 存储过程和函数
 
 （1）就是一组SQL语句集，功能强大，可以实现一些比较复杂的逻辑功能，类似于JAVA语言中的方法。
 
@@ -1057,7 +1059,7 @@ create PROCEDURE user_porcedPa(
 ```mysql
 > call user_porcedPa(10);
 ```
-## 9.2 数据库备份
+## 数据库备份
 
 **（1）手动方式**
 
@@ -1087,7 +1089,7 @@ mytask.bat 内容是:
 
 创建执行计划任务执行脚本。
 
-## 9.3 数据库范式
+## 数据库范式
 
 （1）作用：为了建立冗余较小、结构合理的数据库，设计数据库时必须遵循一定的规则。
 
@@ -1103,7 +1105,7 @@ mytask.bat 内容是:
 
 [数据库的第一范式，第二范式，第三范式，BCNF范式理解_sofency'Blog-CSDN博客_数据库第三范式](https://blog.csdn.net/qq_43079376/article/details/93647335)
 
-## 9.4 慢查询
+##  慢查询
 
 （1）使用show status使用show status查看MySQL服务器状态信息，包括了慢查询的次数
 
@@ -1116,9 +1118,9 @@ mytask.bat 内容是:
 
 （3）在默认情况下，我们的mysql不会记录慢查询，需要在启动mysql时候，指定记录慢查询才可以，将慢查询定位到日志中。
 
-## 9.5 SQL语句执行慢的原因
+##  SQL语句执行慢的原因
 
-### 9.5.1 偶尔很慢
+### 偶尔很慢
 
 （1） 系统在刷新“脏页”中
 
@@ -1132,7 +1134,7 @@ mytask.bat 内容是:
 
   要执行的这条语句，刚好这条语句涉及到的**表**，别人在用，并且加锁了，我们拿不到锁，只能慢慢等待别人释放锁了。或者，表没有加锁，但要使用到的某个一行被加锁了。
 
-### 9.5.2 一直很慢
+###  一直很慢
 
 (1) 没有用上索引：例如该字段没有索引；由于对字段进行运算、函数操作导致无法用索引。
 
@@ -1141,19 +1143,19 @@ mytask.bat 内容是:
 ## 9.6 一条SQL语句的执行过程
 ![](https://upload-images.jianshu.io/upload_images/24777208-1bd66be70b37e485.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-# 10 常见问题总结
+#  常见问题总结
 
-## 10.1 MySQL的字符串类型
+##  MySQL的字符串类型
 
  **在SQL中，将字符串类型分为了六类：char,varchar,text,blob,enum和set。**
 
 ![image](https://upload-images.jianshu.io/upload_images/24777208-9a9f3219a7a95cf2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-## 10.2 MySQL常用SQL语句大全
+##  MySQL常用SQL语句大全
 
 [MySQL常用SQL语句大全_Sunshine-CSDN博客](https://blog.csdn.net/With__Sunshine/article/details/89176667)
 
-## 10.3 MySQL数据库建库时SQL语句中数据库名、表名用引号的问题
+##  MySQL数据库建库时SQL语句中数据库名、表名用引号的问题
 
 解释：
 
@@ -1163,10 +1165,10 @@ mytask.bat 内容是:
 
 此外，需要注意，有部分程序员喜欢从网页上拷贝别人博客中的SQL脚本，在拷贝-粘贴的过程中容易将反单引号不经意间变为单引号，从而造成导入SQL脚本错误，请大家在开发时特别小心！！！
 
-## 10.4 mysql表操作之建表时的列参数
+##  mysql表操作之建表时的列参数
 
 [https://baijiahao.baidu.com/s?id=1654339922439146488&wfr=spider&for=pc](https://baijiahao.baidu.com/s?id=1654339922439146488&wfr=spider&for=pc)
 
-## 10.5 MySQL数据库的高可用
+##  MySQL数据库的高可用
 
 [MySQL数据库的高可用方案总结](https://www.jb51.net/article/83400.htm)
