解决leetcode博客中图片和文件的路径问题，需要以/开头

--- a/_posts/2021-06-17-LeetCode刷题和算法.md
+++ b/_posts/2021-06-17-LeetCode刷题和算法.md
@@ -6,7 +6,7 @@ tags: 数据结构和算法
 
 ​	在准备面试的过程中，算法和算法题是绕不过去的。这里总结了我leetcode所有刷过的题，和一些算法的总结。下载链接在最后～
 
-![](../assets/image/blog/leetcode/shot.png)
+![](/../assets/image/blog/leetcode/shot.png)
 
-[附件下载](../assets/files/leetcode.docx)
+[附件下载](/../assets/files/leetcode.docx)
 
