--- a/_posts/2021-06-17-前端-学习笔记1.md
+++ b/_posts/2021-06-17-前端-学习笔记1.md
@@ -1,8 +1,8 @@
 ---
-title: 前端-学习笔记
+title: 前端-学习笔记1
 tags: Web基础
 ---
-# 前端-学习笔记(更新中...)
+# 前端-学习笔记1(更新中...)
 
 > 目录：  
 >
@@ -371,191 +371,3 @@ width中如果是百分比，代表占**父容器宽度的百分比**
 	</body>
 </html>
 ```
-
-# CSS
-
-## CSS简介
-
-- Cascading Style Sheets，层叠样式表
-
-- 使用其来表现HTML或者XML等样式文件
-
-### HTML、CSS和JS的关系
-
-![image-20210617125207575](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617125207575.png)
-
-### CSS的作用
-
-![image-20210617125245507](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617125245507.png)
-
-## CSS基础
-
-### CSS基础语法
-
-#### CSS样式规则
-
-CSS规则由两部分构成：选择器、声明
-
-![image-20210617125600584](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617125600584.png)
-
-- 注意
-
-  选择器可以是多个，之间用逗号隔开
-
-#### CSS引用
-
-![image-20210617125713866](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617125713866.png)
-
-#### CSS注释
-
-![image-20210617125931076](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617125931076.png)
-
-### CSS使用方法
-
-#### CSS样式的引用
-
-- 行内样式（内联样式）
-
-![image-20210617130250629](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617130250629.png)
-
-- 内部样式表（嵌入样式）
-
-![image-20210617130323281](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617130323281.png)
-
-- 外部样式表（Link链人）
-
-![image-20210617130611144](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617130611144.png)
-
-- 导入式
-
-![image-20210617130718501](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617130718501.png)
-
-注意：需要卸载style标签内
-
-![image-20210617130759028](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617130759028.png)
-
-**总结**
-
-![image-20210617130844423](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617130844423.png)
-
-#### CSS使用方法优先级
-
-​	对同一个元素，使用多个css的优先级的问题
-
-![image-20210617162848722](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617162848722.png)
-
-### CSS选择器
-
-![image-20210617163140500](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617163140500.png)
-
-#### 标签选择器
-
-![image-20210617163254179](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617163254179.png)
-
-#### 类选择器
-
-（1）![image-20210617163325038](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617163325038.png)
-
-（2）![image-20210617163713144](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617163713144.png)
-
-（3）
-
-![image-20210617163846234](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617163846234.png)
-
-#### ID选择器
-
-![image-20210617164020028](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617164020028.png)
-
-**注意** ：在一个html文件中，id是唯一的。一个id不能在多个标签中，一个标签也不能有多个id
-
-#### 群组选择器
-
-![image-20210617164358525](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617164358525.png)
-
-#### 全局选择器
-
-![image-20210617164529771](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617164529771.png)
-
-#### 后代选择器
-
-![image-20210617165040912](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617165040912.png)
-
-#### 伪类
-
-##### 概念
-
-- 伪类选择器定义特殊状态下的样式
-- 无法用标签、id、class及其它属性实现
-
-##### 链接伪类
-
-![image-20210617165422981](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617165422981.png)
-
-![image-20210617165602550](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617165602550.png)
-
-- 伪类:hover和:active
-
-![image-20210617165740653](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617165740653.png)
-
-##### 伪类顺序
-
-![image-20210617165914239](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617165914239.png)
-
-### CSS继承和层叠
-
-#### 继承
-
-​	从父样式继承了**部分**属性
-
-#### 层叠 
-
-![image-20210617170911891](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617170911891.png)
-
-- 层叠时的优先级
-  1. id选择器 > class选择器 > 标签选择器
-  2. 同类样式多次引用，样式表中后定义的优先级高
-
- #### CSS优先级规则
-
-![image-20210617172115654](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617172115654.png)
-
-##### 选择器权值
-
-![image-20210617172157309](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617172157309.png)
-
-##### 权值规则
-
-![image-20210617172243838](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617172243838.png)
-
-列如下列计算权值：
-
-![image-20210617172342502](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617172342502.png)
-
-##### !important规则
-
-![image-20210617172826621](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617172826621.png)
-
-作用的样式，为最高优先级。
-
-##### 总结
-
-![image-20210617172937657](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617172937657.png)
-
-### CSS样式命名
-
-#### CSS命名规则
-
-![image-20210617173239592](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617173239592.png)
-
-#### 常用CSS命名
-
-![image-20210617173342100](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617173342100.png)
-
-![image-20210617173353006](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617173353006.png)
-
-![image-20210617173402403](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617173402403.png)
-
-#### 注意事项
-
-![image-20210617173444331](/../assets/%E5%89%8D%E7%AB%AF-%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0.assets/image-20210617173444331.png)
-
