前端-学习笔记修改

--- a/_posts/2021-06-17-前端-学习笔记1.md
+++ b/_posts/2021-06-17-前端-学习笔记1.md
@@ -18,6 +18,8 @@ tags: Web基础
 >
 > - 慕课网
 
+​	**前端-学习笔记**系列是我在学习时候看视频记录的，中间会有大量的截图，而且排版可能看着有些混乱。别放弃～记得打开侧栏，对着目录一起看，最好是pc端浏览，也可以私信我，获得markdown版文件～
+
 # HTML
 
 ## HTML基本语法
