修改设计模式博客

--- a/_posts/2020-12-11-设计模式.md
+++ b/_posts/2020-12-11-设计模式.md
@@ -3,5 +3,1688 @@ title: 设计模式
 tags: 编程艺术
 ---
 
-*由简书搬迁而来，bug和格式修改中，请看[**原文链接**](https://www.jianshu.com/p/04e47870b72d)*
+> 目录  
+>   1 概述  
+>   2 单例模式  
+>   3 原型模式  
+>   4 工厂模式  
+>   5 抽象工厂模式  
+>   6 建造者模式  
+>   7 代理模式  
+>   8 适配器模式  
+>   9 桥接模式  
+>   10 装饰模式  
+>   11 外观模式  
+>   12 享元模式  
+>   13 组合模式  
+>   14 模板方法模式  
+>   15 策略模式  
+>   16 命令模式  
+>   17 责任链模式   
+>   18 状态模式  
+>   19 观察者模式  
+>   20 中介者模式  
+>   21 迭代器模式  
+>   22 访问者模式  
+>   23 备忘录模式  
+>   24 解释器模式  
+>
+> 参考资料  
+>   - CSDN [单例模式（单例设计模式）详解](http://c.biancheng.net/view/1338.html)  
+>   - [Javadop](https://javadoop.com/post/design-pattern)  
 
+# 概述 
+
+## 设计模式概念
+
+  软件设计模式（Software Design Pattern），又称设计模式，是一套被反复使用、多数人知晓的、经过分类编目的、代码设计经验的总结。它描述了在软件设计过程中的一些不断重复发生的问题，以及该问题的解决方案。也就是说，它是解决特定问题的一系列套路，是前辈们的代码设计经验的总结，具有一定的普遍性，可以反复使用。其目的是为了提高代码的可重用性、代码的可读性和代码的可靠性。
+
+## 23种设计模式分类
+
+![img](/../assets/Pattern/1240.png)
+
+### 根据目的来分
+
+  根据模式是用来完成什么工作来划分，这种方式可分为**创建型模式**、**结构型模式**和**行为型模式** 3 种。
+
+（1）创建型模式：用于描述“怎样创建对象”，它的主要特点是“**将对象的创建与使用分离**”。GoF 中提供了**单例**、**原型**、**工厂方法**、**抽象工厂**、**建造者**等 5 种创建型模式。
+
+（2）结构型模式：用于描述如何将类或对象**按某种布局组成更大的结构**，GoF 中提供了**代理、适配器、桥接、装饰、外观、享元、组合**等 7 种结构型模式。
+
+（3）行为型模式：用于描述类或对象之间怎样**相互协作**共同完成单个对象都无法单独完成的任务，以及怎样分配职责。GoF 中提供了**模板方法、策略、命令、职责链、状态、观察者、中介者、迭代器、访问者、备忘录、解释器**等 11 种行为型模式。
+
+### 根据作用范围来分
+
+  根据模式是主要用于类上还是主要用于对象上来分，这种方式可分为**类模式**和**对象模式**两种。
+
+（1）类模式：用于处理类与子类之间的关系，这些关系通过继承来建立，是静态的，在编译时刻便确定下来了。GoF中的工厂方法、（类）适配器、模板方法、解释器属于该模式。
+
+（2）对象模式：用于处理对象之间的关系，这些关系可以通过组合或聚合来实现，在运行时刻是可以变化的，更具动态性。GoF 中除了以上 4 种，其他的都是对象模式。
+
+## 23种设计模式的功能
+
+（1）单例（Singleton）模式：某个类只能生成一个实例，该类提供了一个全局访问点供外部获取该实例，其拓展是有限多例模式。
+
+（2）原型（Prototype）模式：将一个对象作为原型，通过对其进行复制而克隆出多个和原型类似的新实例。
+
+（3）工厂方法（Factory Method）模式：**定义一个用于创建产品的接口**，由子类决定生产什么产品。
+
+（4）抽象工厂（AbstractFactory）模式：**提供一个创建产品族的接口**，其每个子类可以生产一系列相关的产品。
+
+（5）建造者（Builder）模式：**将一个复杂对象分解成多个相对简单的部分**，然后根据不同需要分别创建它们，最后构建成该复杂对象。
+
+（6）代理（Proxy）模式：为某对象提供一种代理以控制对该对象的访问。即客户端通过代理**间接地访问该对象**，从而限制、增强或修改该对象的一些特性。
+
+（7）适配器（Adapter）模式：**将一个类的接口转换成客户希望的另外一个接口**，使得原本由于接口不兼容而不能一起工作的那些类能一起工作。
+
+（8）桥接（Bridge）模式：将抽象与实现分离，使它们可以独立变化。它是**用组合关系代替继承关系来实现**，从而降低了抽象和实现这两个可变维度的耦合度。
+
+（9）装饰（Decorator）模式：动态的给对象增加一些职责，即增加其额外的功能。
+
+（10）外观（Facade）模式：为多个复杂的子系统提供一个一致的接口，使这些子系统更加容易被访问。
+
+（11）享元（Flyweight）模式：运用共享技术来有效地支持**大量细粒度对象的复用**。
+
+（12）组合（Composite）模式：将对象组合成树状层次结构，使用户对单个对象和组合对象具有一致的访问性。
+
+（13）模板方法（TemplateMethod）模式：定义一个操作中的算法骨架，而将算法的一些步骤延迟到子类中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
+
+（14）策略（Strategy）模式：定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的改变不会影响使用算法的客户。
+
+（15）命令（Command）模式：将一个请求封装为一个对象，使**发出请求的责任和执行请求的责任分割开**。
+
+（16）职责链（Chain of Responsibility）模式：把请求从链中的一个对象传到下一个对象，直到请求被响应为止。通过这种方式去除对象之间的耦合。
+
+（17）状态（State）模式：允许一个对象在其内部状态发生改变时改变其行为能力。
+
+（18）观察者（Observer）模式：多个对象间存在一对多关系，当一个对象发生改变时，把这种改变通知给其他多个对象，从而影响其他对象的行为。
+
+（19）中介者（Mediator）模式：定义一个中介对象来简化原有对象之间的交互关系，降低系统中对象间的耦合度，使原有对象之间不必相互了解。
+
+（20）迭代器（Iterator）模式：提供一种方法来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示。
+
+（21）访问者（Visitor）模式：在不改变集合元素的前提下，为一个集合中的每个元素提供多种访问方式，即每个元素有多个访问者对象访问。
+
+（22）备忘录（Memento）模式：在不破坏封装性的前提下，获取并保存一个对象的内部状态，以便以后恢复它。
+
+（23）解释器（Interpreter）模式：提供如何定义语言的文法，以及对语言句子的解释方法，即解释器。
+
+## 程序设计原则
+
+（1）开闭原则：软件实体应当对扩展开放，对修改关闭（Software entities should be open for extension，but closed for modification）
+
+（2）里氏替换原则：继承必须确保超类所拥有的性质在子类中仍然成立（Inheritance should ensure that any property proved about supertype objects also holds for subtype objects）
+
+（3）依赖倒置原则：高层模块不应该依赖低层模块，两者都应该依赖其抽象；抽象不应该依赖细节，细节应该依赖抽象。其核心思想是：**要面向接口编程，不要面向实现编程**。
+
+（4）单一职责原则：一个类应该有且仅有一个引起它变化的原因，否则类应该被拆分
+
+（5）接口隔离原则（Interface Segregation Principle，ISP）：要为各个类建立它们需要的专用接口，而不要试图去建立一个很庞大的接口供所有依赖它的类去调用
+
+（6）迪米特法则：如果两个软件实体无须直接通信，那么就不应当发生直接的相互调用，可以通过第三方转发该调用。其目的是降低类之间的耦合度，提高模块的相对独立性。
+
+（7）合成复用原则：要尽量先使用组合或者聚合等关联关系来实现，其次才考虑使用继承关系来实现。
+
+# 单例模式
+
+## 定义
+
+  指一个类只有一个实例，且该类能自行创建这个实例的一种模式。
+
+## 特点
+
+（1）单例类只有一个实例对象；
+
+（2）该单例对象必须由单例类自行创建；
+
+（3）单例类对外提供一个访问该单例的全局访问点。
+
+## 实现
+
+  下面列出常见三种。
+
+### 懒汉式单例 
+
+该模式的特点是类加载时没有生成单例，只有当第一次调用 getlnstance 方法时才去创建这个单例。代码如下：
+```java
+public class LazySingleton{
+   private static volatile LazySingleton instance=null;//保证 instance 在所有线程中同步
+   //private 避免类在外部被实例化
+   private LazySingleton(){
+   }
+  
+   public static synchronized LazySingleton getInstance(){
+      //getInstance 方法前加同步
+      if(instance==null){
+        instance = new LazySingleton();
+      }
+      return instance;
+   }
+ }
+```
+注意：如果编写的是多线程程序，则不要删除上例代码中的关键字 volatile 和 synchronized，否则将存在线程非安全的问题。如果不删除这两个关键字就能保证线程安全，但是每次访问时都要同步，会影响性能，且消耗更多的资源，这是懒汉式单例的缺点。
+
+### 饿汉式单例
+
+该模式的特点是类一旦加载就创建一个单例，保证在调用 getInstance 方法之前单例已经存在了。
+```java
+public class HungrySingleton{
+   private static final HungrySingleton instance = new HungrySingleton();
+   private HungrySingleton(){
+   }
+   public static HungrySingleton getInstance(){
+    return instance;
+   }
+ }
+```
+  饿汉式单例在类创建的同时就已经创建好一个静态的对象供系统使用，以后不再改变，所以是**线程安全**的，可以直接用于多线程而不会出现问题。
+
+### 双重检验锁
+
+```java
+class Single {
+	private static volatile Single instance;
+  private Single(){};
+ 	public static Single getInstane(){
+    // 多线程直接访问，不做控制，不影响性能
+    if(instance == null){
+      synchronized(Single.class){
+        // 第一个进入的线程判断为null,第二个进来时已经不是null了
+        if(instance == null){
+          instance = new Single();
+        }
+      }
+    }
+    // 不为null，不影响性性能
+    return instance;
+  }
+}
+```
+
+  对比懒汉式，首先看getInstance方法，我们在方法声明上去除了synchronized关键字，多线程进入方法内部，判断是否为null，如果为null，多个线程同时进入if块内，此时，我们是用Single.Class对象同步一段方法。保证只有一个线程进入该方法。并且判断是否为null，如果为null，就进行初始化。我们想象一下，如果第一个线程进入进入同步块，发现该实例为null，于是进入if块实例化，第二个线程进入同步内则发现实例已经不是null，直接就返回 了，从而保证了并发安全。那么这个和懒汉式方式又什么区别呢？懒汉式方式的缺陷是：每个线程每次进入该方法都需要被同步，成本巨大。而双重检验锁方式呢？每个线程最多只有在第一次的时候才会进入同步块，也就是说，只要实例被初始化了，那么之后进入该方法的线程就不必进入同步块了。就解决并发下线程安全和性能的平衡。虽然第一次还是会被阻塞。
+
+# 原型模式
+
+## 定义
+
+  用一个已经创建的实例作为原型，通过复制该原型对象来创建一个和原型相同或相似的新对象。在这里，原型实例指定了要创建的对象的种类。用这种方式创建对象非常高效，根本无须知道对象创建的细节。
+
+## 实现
+
+  Object 类中有一个 clone() 方法，它用于生成一个新的对象，当然，如果我们要调用这个方法，java 要求我们的类必须先**实现 Cloneable 接口**，此接口没有定义任何方法，但是不这么做的话，在 clone() 的时候，会抛出 CloneNotSupportedException 异常。
+
+```java
+protected native Object clone() throws CloneNotSupportedException;
+```
+
+- 浅克隆：创建一个新对象，新对象的属性和原来对象完全相同，对于非基本类型属性，仍指向原有属性所指向的对象的内存地址。
+
+- 深克隆：创建一个新对象，属性中引用的其他对象也会被克隆，不再指向原有对象地址。
+
+  Java 中的 Object 类提供了浅克隆的 clone() 方法，具体原型类只要实现 Cloneable 接口就可实现对象的浅克隆，这里的 Cloneable 接口就是抽象原型类。其代码如下：
+```java
+//具体原型类
+class Realizetype implements Cloneable{
+   Realizetype(){
+    System.out.println("具体原型创建成功！");
+   }
+   public Object clone() throws CloneNotSupportedException{
+    System.out.println("具体原型复制成功！");
+    return (Realizetype) super.clone();
+   }
+ }
+ //原型模式的测试类
+public class PrototypeTest{
+  public static void main(String[]args) throws CloneNotSupportedException{
+    Realizetype obj1 = new Realizetype();
+    Realizetype obj2 = (Realizetype)obj1.clone();
+    System.out.println("obj1==obj2?"+(obj1==obj2));
+   }
+}
+```
+# 工厂模式
+
+## 定义
+
+  定义一个创建产品对象的工厂接口，将产品对象的实际创建工作推迟到具体子工厂类当中。这满足创建型模式中所要求的“创建与使用相分离”的特点。
+
+  按实际业务场景划分，工厂模式有 3 种不同的实现方式，分别是简单工厂模式、工厂方法模式和抽象工厂模式。
+
+## 简单工厂模式
+
+（1）概念
+
+  如果要创建的产品不多，只要一个工厂类就可以完成，这种模式叫“简单工厂模式”。
+
+  在简单工厂模式中创建实例的方法通常为静态（static）方法，因此简单工厂模式（Simple Factory Pattern）又叫作静态工厂方法模式（Static Factory Method Pattern）。
+
+（2）实现
+
+- 简单工厂（SimpleFactory）：是简单工厂模式的核心，负责实现创建所有实例的内部逻辑。工厂类的创建产品类的方法可以被外界直接调用，创建所需的产品对象。
+
+- 抽象产品（Product）：是简单工厂创建的所有对象的父类，负责描述所有实例共有的公共接口。
+
+- 具体产品（ConcreteProduct）：是简单工厂模式的创建目标。
+
+其结构图如下图所示。
+
+![img](/../assets/Pattern/1240-20210628100738046.png)
+
+```java
+public class FoodFactory {
+  /*
+  	其中，LanZhouNoodle 和 HuangMenChicken 都继承自 Food。
+  	SimpleFactory: FoodFactory类
+  	Product: Food接口
+  	ConcreteProduct: LanZhouNoodle、HuangMenChicken
+  */
+    public static Food makeFood(String name) {
+        if (name.equals("noodle")) {
+            Food noodle = new LanZhouNoodle();
+            noodle.addSpicy("more");
+            return noodle;
+        } else if (name.equals("chicken")) {
+            Food chicken = new HuangMenChicken();
+            chicken.addCondiment("potato");
+            return chicken;
+        } else {
+            return null;
+        }
+    }
+}
+```
+
+## 工厂模式
+
+（1）定义
+
+  “工厂方法模式”是对简单工厂模式的进一步抽象化，其好处是可以使系统在不修改原来代码的情况下引进新的产品，即满足**开闭原则**。
+
+（2）实现
+
+· 抽象工厂（Abstract Factory）：提供了创建产品的接口，调用者通过它访问具体工厂的工厂方法 newProduct() 来创建产品。
+
+· 具体工厂（ConcreteFactory）：主要是实现抽象工厂中的抽象方法，完成具体产品的创建。
+
+· 抽象产品（Product）：定义了产品的规范，描述了产品的主要特性和功能。
+
+· 具体产品（ConcreteProduct）：实现了抽象产品角色所定义的接口，由具体工厂来创建，它同·具体工厂之间一一对应。
+
+其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738057.gif)
+
+```java
+// 其中，ChineseFoodA、ChineseFoodB、AmericanFoodA、AmericanFoodB 都派生自 Food。
+public interface FoodFactory {
+    Food makeFood(String name);
+}
+public class ChineseFoodFactory implements FoodFactory {
+
+    @Override
+    public Food makeFood(String name) {
+        if (name.equals("A")) {
+            return new ChineseFoodA();
+        } else if (name.equals("B")) {
+            return new ChineseFoodB();
+        } else {
+            return null;
+        }
+    }
+}
+public class AmericanFoodFactory implements FoodFactory {
+
+    @Override
+    public Food makeFood(String name) {
+        if (name.equals("A")) {
+            return new AmericanFoodA();
+        } else if (name.equals("B")) {
+            return new AmericanFoodB();
+        } else {
+            return null;
+        }
+    }
+}
+```
+
+# 抽象工厂模式
+
+## 定义
+
+  是一种为访问类提供一个创建一组相关或相互依赖对象的接口，且访问类无须指定所要产品的具体类就能得到同族的不同等级的产品的模式结构
+
+## 实现
+
+抽象工厂模式的主要角色如下：
+
+· 抽象工厂（Abstract Factory）：提供了创建产品的接口，它包含多个创建产品的方法 newProduct()，可以创建多个不同等级的产品。
+
+· 具体工厂（Concrete Factory）：主要是实现抽象工厂中的多个抽象方法，完成具体产品的创建。
+
+· 抽象产品（Product）：定义了产品的规范，描述了产品的主要特性和功能，抽象工厂模式有多个抽象产品。
+
+· 具体产品（ConcreteProduct）：实现了抽象产品角色所定义的接口，由具体工厂来创建，它同具体工厂之间是多对一的关系。
+
+抽象工厂模式的结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738062.gif)
+
+<img src="/../assets/Pattern/abstract-factory-3.png" alt="abstract-factory-3" style="zoom:50%;" />
+
+```java
+/*
+	客户端调用
+*/
+public static void main(String[] args) {
+    // 第一步就要选定一个“大厂”
+    ComputerFactory cf = new AmdFactory();
+    // 从这个大厂造 CPU
+    CPU cpu = cf.makeCPU();
+    // 从这个大厂造主板
+    MainBoard board = cf.makeMainBoard();
+      // 从这个大厂造硬盘
+      HardDisk hardDisk = cf.makeHardDisk();
+
+    // 将同一个厂子出来的 CPU、主板、硬盘组装在一起
+    Computer result = new Computer(cpu, board, hardDisk);
+}
+```
+
+# 建造者模式
+
+## 定义
+
+​	指将一个复杂对象的构造与它的表示分离，使同样的构建过程可以创建不同的表示，这样的设计模式被称为建造者模式。它是将一个复杂的对象分解为多个简单的对象，然后**一步一步构建**而成。它将变与不变相分离，即产品的组成部分是不变的，但每一部分是可以灵活选择的。
+
+## 实现
+
+建造者（Builder）模式的主要角色如下：
+
+· 产品角色（Product）：它是包含多个组成部件的复杂对象，由具体建造者来创建其各个零部件。
+
+· 抽象建造者（Builder）：它是一个包含创建产品各个子部件的抽象方法的接口，通常还包含一个返回复杂产品的方法 getResult()。
+
+· 具体建造者(Concrete Builder）：实现 Builder 接口，完成复杂产品的各个部件的具体创建方法。
+
+· 指挥者（Director）：它调用建造者对象中的部件构造与装配方法完成复杂对象的创建，在指挥者中不涉及具体产品的信息。
+
+其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738055.gif)
+
+ 在实际代码中，通常可以构造成链式调用。
+```java
+Food food = new FoodBuilder().a().b().c().build();
+Food food = Food.builder().a().b().c().build();
+```
+下面是中规中矩的构造者模式：
+
+```java
+class User {
+    // 下面是“一堆”的属性
+    private String name;
+    private String password;
+    private String nickName;
+    private int age;
+
+    // 构造方法私有化，不然客户端就会直接调用构造方法了
+    private User(String name, String password, String nickName, int age) {
+        this.name = name;
+        this.password = password;
+        this.nickName = nickName;
+        this.age = age;
+    }
+    // 静态方法，用于生成一个 Builder，这个不一定要有，不过写这个方法是一个很好的习惯，
+    // 有些代码要求别人写 new User.UserBuilder().a()...build() 看上去就没那么好
+    public static UserBuilder builder() {
+        return new UserBuilder();
+    }
+
+    public static class UserBuilder {
+        // 下面是和 User 一模一样的一堆属性
+        private String  name;
+        private String password;
+        private String nickName;
+        private int age;
+
+        private UserBuilder() {
+        }
+
+        // 链式调用设置各个属性值，返回 this，即 UserBuilder
+        public UserBuilder name(String name) {
+            this.name = name;
+            return this;
+        }
+
+        public UserBuilder password(String password) {
+            this.password = password;
+            return this;
+        }
+
+        public UserBuilder nickName(String nickName) {
+            this.nickName = nickName;
+            return this;
+        }
+
+        public UserBuilder age(int age) {
+            this.age = age;
+            return this;
+        }
+
+        // build() 方法负责将 UserBuilder 中设置好的属性“复制”到 User 中。
+        // 当然，可以在 “复制” 之前做点检验
+        public User build() {
+            if (name == null || password == null) {
+                throw new RuntimeException("用户名和密码必填");
+            }
+            if (age <= 0 || age >= 150) {
+                throw new RuntimeException("年龄不合法");
+            }
+            // 还可以做赋予”默认值“的功能
+              if (nickName == null) {
+                nickName = name;
+            }
+            return new User(name, password, nickName, age);
+        }
+    }
+}
+```
+
+# 代理模式
+
+## 定义
+
+  由于某些原因需要给某对象提供一个代理以控制对该对象的访问。这时，**访问对象不适合或者不能直接引用目标对象**，代理对象作为访问对象和目标对象之间的中介。
+
+## 实现
+
+代理模式的主要角色：
+
+· 抽象主题（Subject）类：通过接口或抽象类声明真实主题和代理对象实现的业务方法。
+
+· 真实主题（Real Subject）类：实现了抽象主题中的具体业务，是代理对象所代表的真实对象，是最终要引用的对象。
+
+· 代理（Proxy）类：**提供了与真实主题相同的接口**，其**内部含有对真实主题的引用**，它可以访问、控制或扩展真实主题的功能。
+
+其结构图如图所示
+
+![img](/../assets/Pattern/strip.gif)
+
+```java
+public interface FoodService {
+    Food makeChicken();
+    Food makeNoodle();
+}
+
+public class FoodServiceImpl implements FoodService {
+    public Food makeChicken() {
+          Food f = new Chicken()
+        f.setChicken("1kg");
+          f.setSpicy("1g");
+          f.setSalt("3g");
+        return f;
+    }
+    public Food makeNoodle() {
+        Food f = new Noodle();
+        f.setNoodle("500g");
+        f.setSalt("5g");
+        return f;
+    }
+}
+
+// 代理要表现得“就像是”真实实现类，所以需要实现 FoodService
+public class FoodServiceProxy implements FoodService {
+
+    // 内部一定要有一个真实的实现类，当然也可以通过构造方法注入
+    private FoodService foodService = new FoodServiceImpl();
+
+    public Food makeChicken() {
+        System.out.println("我们马上要开始制作鸡肉了");
+
+        // 如果我们定义这句为核心代码的话，那么，核心代码是真实实现类做的，
+        // 代理只是在核心代码前后做些“无足轻重”的事情
+        Food food = foodService.makeChicken();
+
+        System.out.println("鸡肉制作完成啦，加点胡椒粉"); // 增强
+          food.addCondiment("pepper");
+
+        return food;
+    }
+    public Food makeNoodle() {
+        System.out.println("准备制作拉面~");
+        Food food = foodService.makeNoodle();
+        System.out.println("制作完成啦")
+        return food;
+    }
+}
+```
+
+```java
+// 客户端
+// 这里用代理类来实例化
+FoodService foodService = new FoodServiceProxy();
+foodService.makeChicken();
+```
+
+# 适配器模式
+
+## 定义
+
+  将一个类的接口转换成客户希望的另外一个接口，使得原本由于接口不兼容而不能一起工作的那些类能一起工作。适配器模式分为**类结构型模式**和**对象结构型模式**两种，前者类之间的耦合度比后者高，且要求程序员了解现有组件库中的相关组件的内部结构，所以应用相对较少些。
+
+## 实现
+
+适配器模式（Adapter）包含以下主要角色。
+
+· 目标（Target）接口：当前系统业务所期待的接口，它可以是抽象类或接口。
+
+· 适配者（Adaptee）类：它是被访问和适配的现存组件库中的组件接口。
+
+· 适配器（Adapter）类：它是一个转换器，通过继承或引用适配者的对象，把适配者接口转换成目标接口，让客户按目标接口的格式访问适配者。
+
+（1）类适配器模式的结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738011.gif)
+
+<img src="/../assets/Pattern/adapter-2.png" alt="adapter-1" style="zoom:50%;" />
+
+​	通过继承的方法，适配器自动获得了所需要的大部分方法。这个时候，客户端使用更加简单，直接 `Target t = new SomeAdapter();` 就可以了。
+
+（2）对象适配器模式的结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738030.gif)
+
+例子，将鸡适配成鸭，这样鸡也能当鸭来用。因为，现在鸭这个接口，我们没有合适的实现类可以用，所以需要适配器：
+
+```java
+public interface Duck {
+    public void quack(); // 鸭的呱呱叫
+    public void fly(); // 飞
+}
+
+public interface Cock {
+    public void gobble(); // 鸡的咕咕叫
+    public void fly(); // 飞
+}
+
+public class WildCock implements Cock {
+    public void gobble() {
+        System.out.println("咕咕叫");
+    }
+    public void fly() {
+        System.out.println("鸡也会飞哦");
+    }
+}
+```
+
+鸭接口有 fly() 和 quare() 两个方法，鸡 Cock 如果要冒充鸭，fly() 方法是现成的，但是鸡不会鸭的呱呱叫，没有 quack() 方法。这个时候就需要适配了：
+
+```java
+// 毫无疑问，首先，这个适配器肯定需要 implements Duck，这样才能当做鸭来用
+public class CockAdapter implements Duck {
+
+    Cock cock;
+    // 构造方法中需要一个鸡的实例，此类就是将这只鸡适配成鸭来用
+      public CockAdapter(Cock cock) {
+        this.cock = cock;
+    }
+
+    // 实现鸭的呱呱叫方法
+    @Override
+      public void quack() {
+        // 内部其实是一只鸡的咕咕叫
+        cock.gobble();
+    }
+
+      @Override
+      public void fly() {
+        cock.fly();
+    }
+}
+```
+
+客户端调用很简单了：
+
+```java
+public static void main(String[] args) {
+    // 有一只野鸡
+      Cock wildCock = new WildCock();
+      // 成功将野鸡适配成鸭
+      Duck duck = new CockAdapter(wildCock);
+      ...
+}
+```
+
+# 桥接模式
+
+## 定义
+
+​	将抽象与实现分离，使它们可以独立变化。它是**用组合关系代替继承关系**来实现，从而降低了抽象和实现这两个可变维度的耦合度。桥梁模式的优点也是显而易见的，就是非常容易进行扩展。
+
+## 实现
+
+· 抽象化（Abstraction）角色：定义抽象类，并**包含一个对实现化对象的引用**。
+
+· 扩展抽象化（Refined Abstraction）角色：是抽象化角色的子类，实现父类中的业务方法，并通过组合关系调用实现化角色中的业务方法。
+
+· 实现化（Implementor）角色：定义实现化角色的接口，供扩展抽象化角色调用。
+
+· 具体实现化（Concrete Implementor）角色：给出实现化角色接口的具体实现。
+
+其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738044.gif)
+
+<img src="/../assets/Pattern/bridge-1.png" alt="bridge-1" style="zoom:50%;" />
+
+客户端：
+
+```java
+public static void main(String[] args) {
+    Shape greenCircle = new Circle(10, new GreenPen());
+    Shape redRectangle = new Rectangle(4, 8, new RedPen());
+    greenCircle.draw();
+    redRectangle.draw();
+}
+```
+
+# 装饰模式
+
+## 定义
+
+​	指在不改变现有对象结构的情况下，动态地给该对象增加一些职责（即增加其额外功能）的模式，它属于对象结构型模式。
+
+​	既然说是装饰，那么往往就是**添加小功能**这种，而且，我们要满足可以添加多个小功能。最简单的，代理模式就可以实现功能的增强，但是代理不容易实现多个功能的增强，当然你可以说用代理包装代理的多层包装方式，但是那样的话代码就复杂了。
+
+## 实现
+
+装饰模式主要包含以下角色
+
+· 抽象构件（Component）角色：定义一个抽象接口以规范准备接收附加责任的对象。
+
+· 具体构件（ConcreteComponent）角色：实现抽象构件，通过装饰角色为其添加一些职责。
+
+· 抽象装饰（Decorator）角色：继承抽象构件，并包含具体构件的实例，可以通过其子类扩展具·体构件的功能。
+
+· 具体装饰（ConcreteDecorator）角色：实现抽象装饰的相关方法，并给具体构件对象添加附加的责任。
+
+装饰模式的结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738059.gif)
+
+ <img src="/../assets/Pattern/decorator-1.png" alt="decorator-1" style="zoom:50%;" />
+
+首先，定义饮料抽象基类：
+
+```java
+public abstract class Beverage {
+      // 返回描述
+      public abstract String getDescription();
+      // 返回价格
+      public abstract double cost();
+}
+```
+
+然后是三个基础饮料实现类，红茶、绿茶和咖啡：
+
+```java
+public class BlackTea extends Beverage {
+      public String getDescription() {
+        return "红茶";
+    }
+      public double cost() {
+        return 10;
+    }
+}
+public class GreenTea extends Beverage {
+    public String getDescription() {
+        return "绿茶";
+    }
+      public double cost() {
+        return 11;
+    }
+}
+...// 咖啡省略
+```
+
+定义调料，也就是装饰者的基类，此类必须继承自 Beverage：
+
+```java
+// 调料
+public abstract class Condiment extends Beverage {
+
+}
+```
+
+然后我们来定义柠檬、芒果等具体的调料，它们属于装饰者，毫无疑问，这些调料肯定都需要继承调料 Condiment 类：
+
+```java
+public class Lemon extends Condiment {
+    private Beverage bevarage;
+    // 这里很关键，需要传入具体的饮料，如需要传入没有被装饰的红茶或绿茶，
+    // 当然也可以传入已经装饰好的芒果绿茶，这样可以做芒果柠檬绿茶
+    public Lemon(Beverage bevarage) {
+        this.bevarage = bevarage;
+    }
+    public String getDescription() {
+        // 装饰
+        return bevarage.getDescription() + ", 加柠檬";
+    }
+    public double cost() {
+        // 装饰
+        return beverage.cost() + 2; // 加柠檬需要 2 元
+    }
+}
+
+public class Mango extends Condiment {
+    private Beverage bevarage;
+    public Mango(Beverage bevarage) {
+        this.bevarage = bevarage;
+    }
+    public String getDescription() {
+        return bevarage.getDescription() + ", 加芒果";
+    }
+    public double cost() {
+        return beverage.cost() + 3; // 加芒果需要 3 元
+    }
+}
+...// 给每一种调料都加一个类
+```
+
+看客户端调用：
+
+```java
+public static void main(String[] args) {
+    // 首先，我们需要一个基础饮料，红茶、绿茶或咖啡
+    Beverage beverage = new GreenTea();
+    // 开始装饰
+    beverage = new Lemon(beverage); // 先加一份柠檬
+    beverage = new Mongo(beverage); // 再加一份芒果
+
+    System.out.println(beverage.getDescription() + " 价格：￥" + beverage.cost());
+    //"绿茶, 加柠檬, 加芒果 价格：￥16"
+}
+```
+
+如果我们需要 **芒果-珍珠-双份柠檬-红茶**：
+
+```java
+Beverage beverage = new Mongo(new Pearl(new Lemon(new Lemon(new BlackTea()))));
+```
+
+# Facade外观模式
+
+## 定义
+
+​	外观（Facade）模式又叫作门面模式，是一种通过为多个复杂的子系统提供一个一致的接口，而使这些子系统更加容易被访问的模式。**该模式对外有一个统一接口，外部应用程序不用关心内部子系统的具体细节**，这样会大大降低应用程序的复杂度，提高了程序的可维护性。
+
+## 实现
+
+外观（Facade）模式包含以下主要角色。
+
+· 外观（Facade）角色：为多个子系统对外提供一个共同的接口。
+
+· 子系统（Sub System）角色：实现系统的部分功能，客户可以通过外观角色访问它。
+
+· 客户（Client）角色：通过一个外观角色访问各个子系统的功能。
+
+其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738063.gif)
+
+首先，我们定义一个接口：
+
+```java
+public interface Shape {
+   void draw();
+}
+```
+
+定义几个实现类：
+
+```java
+public class Circle implements Shape {
+    @Override
+    public void draw() {
+       System.out.println("Circle::draw()");
+    }
+}
+
+public class Rectangle implements Shape {
+    @Override
+    public void draw() {
+       System.out.println("Rectangle::draw()");
+    }
+}
+```
+
+客户端调用：
+
+```java
+public static void main(String[] args) {
+    // 画一个圆形
+      Shape circle = new Circle();
+      circle.draw();
+
+      // 画一个长方形
+      Shape rectangle = new Rectangle();
+      rectangle.draw();
+}
+```
+
+以上是我们常写的代码，我们需要画圆就要先实例化圆，画长方形就需要先实例化一个长方形，然后再调用相应的 draw() 方法。
+
+下面，我们看看怎么用门面模式来让客户端调用更加友好一些。
+
+我们先定义一个**门面**：
+
+```java
+public class ShapeMaker {
+   private Shape circle;
+   private Shape rectangle;
+   private Shape square;
+
+   public ShapeMaker() {
+      circle = new Circle();
+      rectangle = new Rectangle();
+      square = new Square();
+   }
+
+  /**
+   * 下面定义一堆方法，具体应该调用什么方法，由这个门面来决定
+   */
+
+   public void drawCircle(){
+      circle.draw();
+   }
+   public void drawRectangle(){
+      rectangle.draw();
+   }
+   public void drawSquare(){
+      square.draw();
+   }
+}
+```
+
+看看现在客户端怎么调用：
+
+```java
+public static void main(String[] args) {
+  ShapeMaker shapeMaker = new ShapeMaker();
+
+  // 客户端调用现在更加清晰了
+  shapeMaker.drawCircle();
+  shapeMaker.drawRectangle();
+  shapeMaker.drawSquare();        
+}
+```
+
+门面模式的优点显而易见，客户端不再需要关注实例化时应该使用哪个实现类，直接调用门面提供的方法就可以了，因为门面类提供的方法的方法名对于客户端来说已经很友好了。 
+
+# 享元模式
+
+## 定义
+
+​	运用共享技术来有效地支持大量细粒度对象的复用。它通过共享已经存在的对象来大幅度减少需要创建的对象数量、避免大量相似类的开销，从而提高系统资源的利用率。
+
+  享元模式的主要优点是：相同对象只要保存一份，这降低了系统中对象的数量，从而降低了系统中细粒度对象给内存带来的压力。
+
+## 实现
+
+享元模式的主要角色有如下。
+
+· 抽象享元角色（Flyweight）：是所有的具体享元类的基类，为具体享元规范需要实现的公共接口，非享元的外部状态以参数的形式通过方法传入。
+
+· 具体享元（Concrete Flyweight）角色：实现抽象享元角色中所规定的接口。
+
+· 非享元（Unsharable Flyweight)角色：是不可以共享的外部状态，它以参数的形式注入具体享元的相关方法中。
+
+· 享元工厂（Flyweight Factory）角色：负责创建和管理享元角色。当客户对象请求一个享元对象时，享元工厂检査系统中是否存在符合要求的享元对象，如果存在则提供给客户；如果不存在的话，则创建一个新的享元对象。
+
+图中是享元模式的结构图，其中：
+
+· UnsharedConcreteFlyweight 是非享元角色，里面包含了非共享的外部状态信息 info；
+
+· Flyweight 是抽象享元角色，里面包含了享元方法 operation(UnsharedConcreteFlyweight state)，非享元的外部状态以参数的形式通过该方法传入；
+
+· ConcreteFlyweight 是具体享元角色，包含了关键字 key，它实现了抽象享元接口；
+
+· FlyweightFactory 是享元工厂角色，它是关键字 key 来管理具体享元；
+
+· 客户角色通过享元工厂获取具体享元，并访问具体享元的相关方法。
+
+![img](/../assets/Pattern/strip-20210628100738276.gif)
+
+​	复用对象最简单的方式是，用一个 HashMap 来存放每次新生成的对象。每次需要一个对象的时候，先到 HashMap 中看看有没有，如果没有，再生成新的对象，然后将这个对象放入 HashMap 中。
+
+# 组合模式
+
+## 定义
+
+​	有时又叫作整体-部分（Part-Whole）模式，它是一种将对象组合成树状的层次结构的模式，用来表示“整体-部分”的关系，使用户对单个对象和组合对象具有一致的访问性。
+
+​	例如，每个员工都有姓名、部门、薪水这些属性，同时还有下属员工集合（虽然可能集合为空），而下属员工和自己的结构是一样的，也有姓名、部门这些属性，同时也有他们的下属员工集合。
+
+## 实现 
+
+· 抽象构件（Component）角色：它的主要作用是为树叶构件和树枝构件声明公共接口，并实现它们的默认行为。在透明式的组合模式中抽象构件还声明访问和管理子类的接口；在安全式的组合模式中不声明访问和管理子类的接口，管理工作由树枝构件完成。（总的抽象类或接口，定义一些通用的方法，比如新增、删除）
+
+· 树叶构件（Leaf）角色：是组合中的叶节点对象，它没有子节点，用于继承或实现抽象构件。
+
+· 树枝构件（Composite）角色 / 中间构件：是组合中的分支节点对象，它有子节点，用于继承和实现抽象构件。它的主要作用是存储和管理子部件，通常包含 Add()、Remove()、GetChild() 等方法。
+
+组合模式分为**透明式的组合模式**和**安全式的组合模式**。
+
+(1) 透明方式
+
+  在该方式中，由于抽象构件声明了所有子类中的全部方法，所以客户端无须区别树叶对象和树枝对象，对客户端来说是透明的。但其缺点是：树叶构件本来没有 Add()、Remove() 及 GetChild() 方法，却要实现它们（空实现或抛异常），这样会带来一些安全性问题。其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738077-4846058.gif)
+
+
+
+(2) 安全方式
+
+  在该方式中，将管理子构件的方法移到树枝构件中，抽象构件和树叶构件没有对子对象的管理方法，这样就避免了上一种方式的安全性问题，但由于叶子和分支有不同的接口，客户端在调用时要知道树叶对象和树枝对象的存在，所以失去了透明性。其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738081.gif)
+
+
+
+# 模板方法模式
+
+## 定义
+
+​	定义一个操作中的算法骨架，而将算法的一些步骤延迟到子类中，使得子类可以不改变该算法结构的情况下重定义该算法的某些特定步骤。
+
+## 实现
+
+（1）抽象类/抽象模板（Abstract Class）
+
+  抽象模板类，负责给出一个算法的轮廓和骨架。它由一个模板方法和若干个基本方法构成。这些方法的定义如下。
+
+① 模板方法：定义了算法的骨架，按某种顺序调用其包含的基本方法。
+
+② 基本方法：是整个算法中的一个步骤，包含以下几种类型。
+
+· 抽象方法：在抽象类中声明，由具体子类实现。
+
+· 具体方法：在抽象类中已经实现，在具体子类中可以继承或重写它。
+
+**· 钩子方法：在抽象类中已经实现，包括用于判断的逻辑方法和需要子类重写的空方法两种**。
+
+2）具体子类/具体实现（Concrete Class）
+
+  具体实现类，实现抽象类中所定义的抽象方法和钩子方法，它们是一个顶级逻辑的一个组成步骤。
+
+模板方法模式的结构图如图 1 所示。
+
+![img](/../assets/Pattern/strip-20210628100738082.gif)
+
+```java
+public abstract class AbstractTemplate {
+    // 这就是模板方法
+    public void templateMethod() {
+        init();
+        apply(); // 这个是重点
+        end(); // 可以作为钩子方法
+    }
+
+    protected void init() {
+        System.out.println("init 抽象层已经实现，子类也可以选择覆写");
+    }
+
+    // 留给子类实现
+    protected abstract void apply();
+
+    protected void end() {
+    }
+}
+```
+
+```java
+public class ConcreteTemplate extends AbstractTemplate {
+    public void apply() {
+        System.out.println("子类实现抽象方法 apply");
+    }
+
+    public void end() {
+        System.out.println("我们可以把 method3 当做钩子方法来使用，需要的时候覆写就可以了");
+    }
+}
+```
+
+客户端调用演示：
+
+```java
+public static void main(String[] args) {
+    AbstractTemplate t = new ConcreteTemplate();
+    // 调用模板方法
+    t.templateMethod();
+}
+```
+
+# 策略模式
+
+## 定义
+
+​	该模式定义了一系列算法，并将每个算法封装起来，使它们可以相互替换，且算法的变化不会影响使用算法的客户。策略模式属于对象行为模式，它通过对算法进行封装，把使用算法的责任和算法的实现分割开来，并委派给不同的对象对这些算法进行管理。
+
+## 实现
+
+策略模式的主要角色如下。
+
+· 抽象策略（Strategy）类：定义了一个公共接口，各种不同的算法以不同的方式实现这个接口，环境角色使用这个接口调用不同的算法，一般使用接口或抽象类实现。
+
+· 具体策略（Concrete Strategy）类：实现了抽象策略定义的接口，提供具体的算法实现。
+
+· 环境（Context）类：持有一个策略类的引用，最终给客户端调用。
+
+其结构图如图所示：
+
+![img](/../assets/Pattern/strip-20210628100738277.gif)
+
+首先，先定义一个策略接口：
+
+```java
+public interface Strategy {
+   public void draw(int radius, int x, int y);
+}
+```
+
+然后我们定义具体的几个策略：
+
+```java
+public class RedPen implements Strategy {
+   @Override
+   public void draw(int radius, int x, int y) {
+      System.out.println("用红色笔画图，radius:" + radius + ", x:" + x + ", y:" + y);
+   }
+}
+public class GreenPen implements Strategy {
+   @Override
+   public void draw(int radius, int x, int y) {
+      System.out.println("用绿色笔画图，radius:" + radius + ", x:" + x + ", y:" + y);
+   }
+}
+public class BluePen implements Strategy {
+   @Override
+   public void draw(int radius, int x, int y) {
+      System.out.println("用蓝色笔画图，radius:" + radius + ", x:" + x + ", y:" + y);
+   }
+}
+```
+
+使用策略的类：
+
+```java
+public class Context {
+   private Strategy strategy;
+
+   public Context(Strategy strategy){
+      this.strategy = strategy;
+   }
+
+   public int executeDraw(int radius, int x, int y){
+      return strategy.draw(radius, x, y);
+   }
+}
+```
+
+客户端演示：
+
+```java
+public static void main(String[] args) {
+    Context context = new Context(new BluePen()); // 使用绿色笔来画
+      context.executeDraw(10, 0, 0);
+}
+```
+
+**对比桥梁模式，非常相似，桥梁模式在左侧加了一层抽象而已。桥梁模式的耦合更低，结构更复杂一些。**
+
+# 命令模式
+
+## 定义
+
+​	将一个请求封装为一个对象，使发出请求的责任和执行请求的责任分割开。这样两者之间通过命令对象进行沟通，这样方便将命令对象进行储存、传递、调用、增加与管理。
+
+## 实现
+
+· 抽象命令类（Command）角色：声明执行命令的接口，拥有执行命令的抽象方法 execute()。
+
+· 具体命令类（Concrete Command）角色：是抽象命令类的具体实现类，**它拥有接收者对象**，并通过调用接收者的功能来完成命令要执行的操作。
+
+· 实现者/接收者（Receiver）角色：执行命令功能的相关操作，是具体命令对象业务的真正实现者。
+
+· 调用者/请求者（Invoker）角色：是请求的发送者，它通常拥有很多的命令对象，并通过访问命令对象来执行相关请求，它不直接访问接收者。
+
+其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738077.gif)
+
+图 16-1 命令模式的结构图
+
+# 责任链模式
+
+## 定义
+
+​	为了避免请求发送者与多个请求处理者耦合在一起，于是将所有请求的处理者通过前一对象记住其下一个对象的引用而连成一条链；当有请求发生时，可将请求沿着这条链传递，直到有对象处理它为止。
+
+## 实现
+
+职责链模式主要包含以下角色。
+
+· 抽象处理者（Handler）角色：定义一个处理请求的接口，包含抽象处理方法和一个后继连接。
+
+· 具体处理者（Concrete Handler）角色：实现抽象处理者的处理方法，判断能否处理本次请求，如果可以处理请求则处理，否则将该请求转给它的后继者。
+
+· 客户类（Client）角色：创建处理链，并向链头的具体处理者对象提交请求，它不关心处理细节和请求的传递过程。
+
+  责任链模式的本质是解耦请求与处理，让请求在处理链中能进行传递与被处理；理解责任链模式应当理解其模式，而不是其具体实现。责任链模式的独到之处是将其节点处理者组合成了链式结构，并允许节点自身决定是否进行请求处理或转发，相当于让请求流动起来。
+
+其结构图如图所示。客户端可按图中所示设置责任链。
+
+<img src="/../assets/Pattern/strip-20210628100738091.gif" alt="img" style="zoom:50%;" />
+
+<img src="/../assets/Pattern/strip-20210628100738092.gif" alt="img" style="zoom:67%;" />
+
+
+
+# 状态模式
+
+## 定义
+
+​	对有状态的对象，把复杂的“判断逻辑”提取到不同的状态对象中，允许状态对象在其内部状态发生改变时改变其行为。
+
+## 实现
+
+· 环境类（Context）角色：也称为上下文，它定义了客户端需要的接口，内部维护一个当前状态，并负责具体状态的切换。
+
+· 抽象状态（State）角色：定义一个接口，用以封装环境对象中的特定状态所对应的行为，可以有一个或多个行为。
+
+· 具体状态（Concrete State）角色：实现抽象状态所对应的行为，并且在需要的情况下进行状态切换。
+
+其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738094.gif)
+
+商品库存中心有个最基本的需求是减库存和补库存，我们看看怎么用状态模式来写。核心在于，我们的关注点不再是 Context 是该进行哪种操作，而是关注在这个 Context 会有哪些操作。
+
+定义状态接口：
+
+```java
+public interface State {
+    public void doAction(Context context);
+}
+```
+
+定义减库存的状态：
+
+```java
+public class DeductState implements State {
+
+    public void doAction(Context context) {
+        System.out.println("商品卖出，准备减库存");
+        context.setState(this);
+
+        //... 执行减库存的具体操作
+    }
+
+    public String toString() {
+        return "Deduct State";
+    }
+} 
+```
+
+定义补库存状态：
+
+```java
+public class RevertState implements State {
+
+    public void doAction(Context context) {
+        System.out.println("给此商品补库存");
+        context.setState(this);
+
+        //... 执行加库存的具体操作
+    }
+
+    public String toString() {
+        return "Revert State";
+    }
+}
+```
+
+前面用到了 context.setState(this)，我们来看看怎么定义 Context 类：
+
+```java
+public class Context {
+    private State state;
+      private String name;
+      public Context(String name) {
+        this.name = name;
+    }
+
+      public void setState(State state) {
+        this.state = state;
+    }
+      public void getState() {
+        return this.state;
+    }
+}
+```
+
+我们来看下客户端调用，大家就一清二楚了：
+
+```java
+public static void main(String[] args) {
+    // 我们需要操作的是 iPhone X
+    Context context = new Context("iPhone X");
+
+    // 看看怎么进行补库存操作
+      State revertState = new RevertState();
+      revertState.doAction(context);
+
+    // 同样的，减库存操作也非常简单
+      State deductState = new DeductState();
+      deductState.doAction(context);
+
+      // 如果需要我们可以获取当前的状态
+    // context.getState().toString();
+}
+```
+
+# 观察者模式
+
+## 定义
+
+​	指多个对象间存在一对多的依赖关系，当一个对象的状态发生改变时，所有依赖于它的对象都得到通知并被自动更新。这种模式有时又称作**发布-订阅模式**、模型-视图模式，它是对象行为型模式。
+
+## 实现
+
+· 抽象主题（Subject）角色：也叫抽象目标类，它提供了一个用于**保存观察者对象的聚集类**和增加、删除观察者对象的方法，以及通知所有观察者的抽象方法。
+
+· 具体主题（Concrete Subject）角色：也叫具体目标类，它实现抽象目标中的通知方法，当具体主题的内部状态发生改变时，通知所有注册过的观察者对象。
+
+· 抽象观察者（Observer）角色：它是一个抽象类或接口，它包含了一个更新自己的抽象方法，当接到具体主题的更改通知时被调用。
+
+· 具体观察者（Concrete Observer）角色：实现抽象观察者中定义的抽象方法，以便在得到目标的更改通知时更新自身的状态。
+
+观察者模式的结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738098.gif)
+
+首先，需要定义主题，每个主题需要持有观察者列表的引用，用于在数据变更的时候通知各个观察者：
+
+```java
+public class Subject {
+    private List<Observer> observers = new ArrayList<Observer>();
+    private int state;
+    public int getState() {
+        return state;
+    }
+    public void setState(int state) {
+        this.state = state;
+        // 数据已变更，通知观察者们
+        notifyAllObservers();
+    }
+    // 注册观察者
+    public void attach(Observer observer) {
+        observers.add(observer);
+    }
+    // 通知观察者们
+    public void notifyAllObservers() {
+        for (Observer observer : observers) {
+            observer.update();
+        }
+    }
+}
+```
+
+定义观察者接口：
+
+```java
+public abstract class Observer {
+    protected Subject subject;
+    public abstract void update();
+}
+```
+
+其实如果只有一个观察者类的话，接口都不用定义了，不过，通常场景下，既然用到了观察者模式，我们就是希望一个事件出来了，会有多个不同的类需要处理相应的信息。比如，订单修改成功事件，我们希望发短信的类得到通知、发邮件的类得到通知、处理物流信息的类得到通知等。
+
+我们来定义具体的几个观察者类：
+
+```java
+public class BinaryObserver extends Observer {
+    // 在构造方法中进行订阅主题
+    public BinaryObserver(Subject subject) {
+        this.subject = subject;
+        // 通常在构造方法中将 this 发布出去的操作一定要小心
+        this.subject.attach(this);
+    }
+    // 该方法由主题类在数据变更的时候进行调用
+    @Override
+    public void update() {
+        String result = Integer.toBinaryString(subject.getState());
+        System.out.println("订阅的数据发生变化，新的数据处理为二进制值为：" + result);
+    }
+}
+
+public class HexaObserver extends Observer {
+    public HexaObserver(Subject subject) {
+        this.subject = subject;
+        this.subject.attach(this);
+    }
+    @Override
+    public void update() {
+        String result = Integer.toHexString(subject.getState()).toUpperCase();
+        System.out.println("订阅的数据发生变化，新的数据处理为十六进制值为：" + result);
+    }
+}
+```
+
+客户端使用也非常简单：
+
+```java
+public static void main(String[] args) {
+    // 先定义一个主题
+    Subject subject1 = new Subject();
+    // 定义观察者
+    new BinaryObserver(subject1);
+    new HexaObserver(subject1);
+
+    // 模拟数据变更，这个时候，观察者们的 update 方法将会被调用
+    subject.setState(11);
+}
+```
+
+output:
+
+```
+订阅的数据发生变化，新的数据处理为二进制值为：1011
+订阅的数据发生变化，新的数据处理为十六进制值为：B
+```
+
+当然，jdk 也提供了相似的支持，具体的大家可以参考 java.util.Observable 和 java.util.Observer 这两个类。
+
+实际生产过程中，观察者模式往往用消息中间件来实现。
+
+# 中介者模式
+
+## 定义
+
+​	定义一个中介对象来封装一系列对象之间的交互，使原有对象之间的耦合松散，且可以独立地改变它们之间的交互。中介者模式又叫调停模式，它是迪米特法则的典型应用。
+
+​	在现实生活中，常常会出现好多对象之间存在复杂的交互关系，这种交互关系常常是“网状结构”，它要求每个对象都必须知道它需要交互的对象。例如，每个人必须记住他（她）所有朋友的电话；而且，朋友中如果有人的电话修改了，他（她）必须让其他所有的朋友一起修改，这叫作“牵一发而动全身”，非常复杂。如果把这种“网状结构”改为“星形结构”的话，将大大降低它们之间的“耦合性”，这时只要找一个“中介者”就可以了。如前面所说的“每个人必须记住所有朋友电话”的问题，只要在网上建立一个每个朋友都可以访问的“通信录”就解决了。这样的例子还有很多，例如，你刚刚参加工作想租房，可以找“房屋中介”；或者，自己刚刚到一个陌生城市找工作，可以找“人才交流中心”帮忙。
+
+## 实现
+
+中介者模式包含以下主要角色。
+
+· 抽象中介者（Mediator）角色：它是中介者的接口，提供了同事对象注册与转发同事对象信息的抽象方法。
+
+· 具体中介者（Concrete Mediator）角色：实现中介者接口，**定义一个 List 来管理同事对象**，协调各个同事角色之间的交互关系，因此它依赖于同事角色。
+
+· 抽象同事类（Colleague）角色：定义同事类的接口，保存中介者对象，提供同事对象交互的抽象方法，实现所有相互影响的同事类的公共功能。
+
+· 具体同事类（Concrete Colleague）角色：是抽象同事类的实现者，当需要与其他同事对象交互时，由中介者对象负责后续的交互。
+
+中介者模式的结构图如图 1 所示。
+
+![img](/../assets/Pattern/strip-20210628100738104.gif)
+
+```java
+import java.util.*;
+
+public class MediatorPattern {
+    public static void main(String[] args) {
+        Mediator md = new ConcreteMediator();
+        Colleague c1, c2;
+        c1 = new ConcreteColleague1();
+        c2 = new ConcreteColleague2();
+        md.register(c1);
+        md.register(c2);
+        c1.send();
+        System.out.println("-------------");
+        c2.send();
+    }
+}
+
+//抽象中介者
+abstract class Mediator {
+    public abstract void register(Colleague colleague);
+
+    public abstract void relay(Colleague cl); //转发
+}
+
+//具体中介者
+class ConcreteMediator extends Mediator {
+    private List<Colleague> colleagues = new ArrayList<Colleague>();
+
+    public void register(Colleague colleague) {
+        if (!colleagues.contains(colleague)) {
+            colleagues.add(colleague);
+            colleague.setMedium(this);
+        }
+    }
+
+    public void relay(Colleague cl) {
+        for (Colleague ob : colleagues) {
+            if (!ob.equals(cl)) {
+                ((Colleague) ob).receive();
+            }
+        }
+    }
+}
+
+//抽象同事类
+abstract class Colleague {
+    protected Mediator mediator;
+
+    public void setMedium(Mediator mediator) {
+        this.mediator = mediator;
+    }
+
+    public abstract void receive();
+
+    public abstract void send();
+}
+
+//具体同事类
+class ConcreteColleague1 extends Colleague {
+    public void receive() {
+        System.out.println("具体同事类1收到请求。");
+    }
+
+    public void send() {
+        System.out.println("具体同事类1发出请求。");
+        mediator.relay(this); //请中介者转发
+    }
+}
+
+//具体同事类
+class ConcreteColleague2 extends Colleague {
+    public void receive() {
+        System.out.println("具体同事类2收到请求。");
+    }
+
+    public void send() {
+        System.out.println("具体同事类2发出请求。");
+        mediator.relay(this); //请中介者转发
+    }
+}
+```
+
+# 迭代器模式
+
+## 定义
+
+​	提供一个对象来顺序访问聚合对象中的一系列数据，而不暴露聚合对象的内部表示。迭代器模式是一种对象行为型模式。
+
+​	在客户访问类与聚合类之间插入一个迭代器，这分离了聚合对象与其遍历行为，对客户也隐藏了其内部细节，且满足“单一职责原则”和“开闭原则”，如 [Java](http://c.biancheng.net/java/) 中的 Collection、List、Set、Map 等都包含了迭代器。
+
+## 实现
+
+· 抽象聚合（Aggregate）角色：定义存储、添加、删除聚合对象以及创建迭代器对象的接口。
+
+· 具体聚合（ConcreteAggregate）角色：实现抽象聚合类，返回一个具体迭代器的实例。
+
+· 抽象迭代器（Iterator）角色：定义访问和遍历聚合元素的接口，通常包含 hasNext()、first()、next() 等方法。
+
+· 具体迭代器（Concretelterator）角色：实现抽象迭代器接口中所定义的方法，完成对聚合对象的遍历，记录遍历的当前位置。
+
+其结构图如图所示。
+
+![img](https://upload-images.jianshu.io/upload_images/24777208-7dde6185aecd1472.gif?imageMogr2/auto-orient/strip)
+
+```java
+import java.util.*;
+
+public class IteratorPattern {
+    public static void main(String[] args) {
+        Aggregate ag = new ConcreteAggregate();
+        ag.add("中山大学");
+        ag.add("华南理工");
+        ag.add("韶关学院");
+        System.out.print("聚合的内容有：");
+        Iterator it = ag.getIterator();
+        while (it.hasNext()) {
+            Object ob = it.next();
+            System.out.print(ob.toString() + "\t");
+        }
+        Object ob = it.first();
+        System.out.println("\nFirst：" + ob.toString());
+    }
+}
+
+//抽象聚合
+interface Aggregate {
+    public void add(Object obj);
+
+    public void remove(Object obj);
+
+    public Iterator getIterator();
+}
+
+//具体聚合
+class ConcreteAggregate implements Aggregate {
+    private List<Object> list = new ArrayList<Object>();
+
+    public void add(Object obj) {
+        list.add(obj);
+    }
+
+    public void remove(Object obj) {
+        list.remove(obj);
+    }
+
+    public Iterator getIterator() {
+        return (new ConcreteIterator(list));
+    }
+}
+
+//抽象迭代器
+interface Iterator {
+    Object first();
+
+    Object next();
+
+    boolean hasNext();
+}
+
+//具体迭代器
+class ConcreteIterator implements Iterator {
+    private List<Object> list = null;
+    private int index = -1;
+
+    public ConcreteIterator(List<Object> list) {
+        this.list = list;
+    }
+
+    public boolean hasNext() {
+        if (index < list.size() - 1) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    public Object first() {
+        index = 0;
+        Object obj = list.get(index);
+        ;
+        return obj;
+    }
+
+    public Object next() {
+        Object obj = null;
+        if (this.hasNext()) {
+            obj = list.get(++index);
+        }
+        return obj;
+    }
+}
+```
+
+# 访问者模式
+
+## 定义
+
+​	将作用于某种数据结构中的各元素的操作分离出来封装成独立的类，使其在不改变数据结构的前提下可以添加作用于这些元素的新的操作，为数据结构中的每个元素提供多种访问方式。它将对数据的操作与数据结构进行分离，是行为类模式中最复杂的一种模式。
+
+## 实现
+
+· 抽象访问者（Visitor）角色：定义一个访问具体元素的接口，为每个具体元素类对应一个访问操作 visit() ，该操作中的参数类型标识了被访问的具体元素。
+
+· 具体访问者（ConcreteVisitor）角色：实现抽象访问者角色中声明的各个访问操作，确定访问者访问一个元素时该做什么。
+
+· 抽象元素（Element）角色：声明一个包含接受操作 accept() 的接口，被接受的访问者对象作为 accept() 方法的参数。
+
+· 具体元素（ConcreteElement）角色：实现抽象元素角色提供的 accept() 操作，其方法体通常都是 visitor.visit(this) ，另外具体元素中可能还包含本身业务逻辑的相关操作。
+
+· 对象结构（Object Structure）角色：是一个包含元素角色的容器，提供让访问者对象遍历容器中的所有元素的方法，通常由 List、Set、Map 等聚合类实现。
+
+其结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738108.gif)
+
+# 备忘录模式
+
+## 定义
+
+  在不破坏封装性的前提下，捕获一个对象的内部状态，并在该对象之外保存这个状态，以便以后当需要时能将该对象恢复到原先保存的状态。该模式又叫快照模式。
+
+## 实现
+
+备忘录模式的主要角色如下。
+
+· 发起人（Originator）角色：记录当前时刻的内部状态信息，提供创建备忘录和恢复备忘录数据的功能，实现其他业务功能，它可以访问备忘录里的所有信息。
+
+· 备忘录（Memento）角色：负责存储发起人的内部状态，在需要的时候提供这些内部状态给发起人。
+
+· 管理者（Caretaker）角色：对备忘录进行管理，提供保存与获取备忘录的功能，但其不能对备忘录的内容进行访问与修改。
+
+备忘录模式的结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738112.gif)
+
+# 解释器模式
+
+## 定义
+
+  给分析对象定义一个语言，并定义该语言的文法表示，再设计一个解析器来解释语言中的句子。也就是说，用编译语言的方式来分析应用中的实例。这种模式实现了文法表达式处理的接口，该接口解释一个特定的上下文。
+
+## 实现
+
+· 抽象表达式（Abstract Expression）角色：定义解释器的接口，约定解释器的解释操作，主要包含解释方法 interpret()。
+
+· 终结符表达式（Terminal Expression）角色：是抽象表达式的子类，用来实现文法中与终结符相关的操作，文法中的每一个终结符都有一个具体终结表达式与之相对应。
+
+· 非终结符表达式（Nonterminal Expression）角色：也是抽象表达式的子类，用来实现文法中与非终结符相关的操作，文法中的每条规则都对应于一个非终结符表达式。
+
+· 环境（Context）角色：通常包含各个解释器需要的数据或是公共的功能，一般用来传递被所有解释器共享的数据，后面的解释器可以从这里获取这些值。
+
+· 客户端（Client）：主要任务是将需要分析的句子或表达式转换成使用解释器对象描述的抽象语法树，然后调用解释器的解释方法，当然也可以通过环境角色间接访问解释器的解释方法。
+
+解释器模式的结构图如图所示。
+
+![img](/../assets/Pattern/strip-20210628100738119.gif)
